@@ -1,9 +1,10 @@
 allprojects {
-    apply plugin: 'java'
-    apply plugin: 'idea'
+    apply(plugin: 'java')
+    apply(plugin: 'idea')
 
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    sourceCompatibility = '1.8'
+    targetCompatibility = '1.8'
+
     group = 'com.haulmont.yarg'
 
     test {
@@ -42,6 +43,7 @@ release {
     }
 }
 
+
 buildscript {
     repositories {
         maven { url "https://nexus.financeactive.com/repository/maven-public/" }
@@ -51,12 +53,12 @@ buildscript {
         //Release plugin
         classpath 'net.researchgate:gradle-release:2.5.0'
     }
-}
 
 def api = project(':yarg-api')
 def core = project(':yarg')
+def console = project(':yarg-console')
 
-configure([api, core]) {
+configure([api, core, console]) {
     sourceSets {
         main {
             java { srcDir 'src' }
@@ -68,24 +70,26 @@ configure([api, core]) {
             resources { srcDir 'test' }
         }
     }
+
+    dependencies {
+        deployerJars(group: 'org.apache.maven.wagon', name: 'wagon-http', version: '1.0-beta-2')
+    }
+}
+
+configure(api) {
+
 }
 
 configure(core) {
-    apply(plugin: 'application')
 
     dependencies {
         compile(api)
-        compile(group: 'commons-cli', name: 'commons-cli', version: '1.2')
-        compile(group: 'commons-logging', name: 'commons-logging', version: '1.1.1')
-        compile(group: 'commons-lang', name: 'commons-lang', version: '2.6')
-        compile(group: 'commons-collections', name: 'commons-collections', version: '3.2.1')
-        compile(group: 'commons-io', name: 'commons-io', version: '1.4')
-        compile(group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4')
+        compile(group: 'commons-logging', name: 'commons-logging', version: '1.2')
+        compile(group: 'org.apache.commons', name: 'commons-lang3', version: '3.4')
+        compile(group: 'commons-io', name: 'commons-io', version: '2.4')
         compile(group: 'dom4j', name: 'dom4j', version: '1.6.1')
-        compile(group: 'log4j', name: 'log4j', version: '1.2.16')
-        compile(group: 'org.slf4j', name: 'slf4j-api', version: '1.7.5')
-        compile(group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.5')
-        compile(group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.1.6')
+        compile(group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21')
+        compile(group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.12')
         compile(group: 'antlr', name: 'antlr', version: '2.7.7')
         compile(group: 'asm', name: 'asm', version: '3.3.1')
         compile(group: 'org.antlr', name: 'antlr-runtime', version: '3.2')
@@ -95,15 +99,15 @@ configure(core) {
         compile(group: 'org.openoffice', name: 'unoil', version: '3.0.0')
         compile(group: "org.apache.avalon.framework", name: "avalon-framework-api", version: '4.3.1')
         compile(group: "org.apache.avalon.framework", name: "avalon-framework-impl", version: '4.3.1')
-        compile(group: "org.apache.xmlgraphics", name: "fop", version: "1.0")
-        compile(group: "org.apache.xmlgraphics", name: "xmlgraphics-commons", version: "1.5")
+        compile(group: "org.apache.xmlgraphics", name: "fop", version: "2.1")
+        compile(group: "org.apache.xmlgraphics", name: "xmlgraphics-commons", version: "2.1")
         compile(group: "org.plutext", name: "jaxb-svg11", version: "1.0.2")
         compile(group: "org.plutext", name: "jaxb-xslfo", version: "1.0.1")
         compile(group: "org.plutext", name: "jaxb-xmldsig-core", version: "1.0.0")
-        compile(group: "org.apache.xmlgraphics", name: "batik-bridge", version: "1.7")
-        compile(group: "org.apache.xmlgraphics", name: "batik-svggen", version: "1.7")
-        compile(group: "org.apache.xmlgraphics", name: "batik-awt-util", version: "1.7")
-        compile(group: "org.apache.xmlgraphics", name: "batik-css", version: "1.7")
+        compile(group: "org.apache.xmlgraphics", name: "batik-bridge", version: "1.8")
+        compile(group: "org.apache.xmlgraphics", name: "batik-svggen", version: "1.8")
+        compile(group: "org.apache.xmlgraphics", name: "batik-awt-util", version: "1.8")
+        compile(group: "org.apache.xmlgraphics", name: "batik-css", version: "1.8")
         compile(group: "xalan", name: "xalan", version: "2.7.1")
         compile(group: "xalan", name: "serializer", version: "2.7.1")
         compile(group: "com.lowagie", name: "itext", version: "2.1.7") {
@@ -118,9 +122,8 @@ configure(core) {
         compile(group: 'org.apache.poi', name: 'poi-scratchpad', version: '3.9') {
             exclude(group: 'org.apache.poi', module: 'poi')
         }
-        compile(group: 'commons-codec', name: 'commons-codec', version: '1.6')
-        compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-core', version: '9.0.6')
-        compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-pdf', version: '9.0.6') {
+        compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-core', version: '9.1.5')
+        compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-pdf', version: '9.1.5') {
             exclude(group: 'org.bouncycastle', module: 'bctsp-jdk14')
             exclude(group: 'org.bouncycastle', module: 'bcprov-jdk14')
             exclude(group: 'org.bouncycastle', module: 'bcmail-jdk14')
@@ -128,16 +131,22 @@ configure(core) {
             exclude(group: 'bouncycastle', module: 'bcprov-jdk14')
             exclude(group: 'bouncycastle', module: 'bctsp-jdk14')
         }
-        compile(group: "org.docx4j", name: "docx4j", version: "3.3.3") {
+        compile(group: "org.docx4j", name: "docx4j", version: "3.3.5") {
             exclude(group: 'org.apache.poi', module: 'poi')
             exclude(group: 'junit', module: 'junit')
+            exclude(group: 'log4j', module: 'log4j')
+            exclude(group: 'org.slf4j', module: 'slf4j-log4j12')
         }
-        compile(group: "org.docx4j", name: "docx4j-ImportXHTML", version: "3.3.1") {
+        compile(group: "org.docx4j", name: "docx4j-ImportXHTML", version: "3.3.4") {
             exclude(group: 'junit', module: 'junit')
             exclude(group: 'org.apache.poi', module: 'poi')
+            exclude(group: 'log4j', module: 'log4j')
+            exclude(group: 'org.slf4j', module: 'slf4j-log4j12')
         }
-        compile(group: "org.docx4j", name: "docx4j-export-fo", version: "3.3.1") {
+        compile(group: "org.docx4j", name: "docx4j-export-fo", version: "3.3.4") {
             exclude(group: 'junit', module: 'junit')
+            exclude(group: 'log4j', module: 'log4j')
+            exclude(group: 'org.slf4j', module: 'slf4j-log4j12')
         }
         compile(group: "com.jayway.jsonpath", name: "json-path", version: "2.1.0")
 
@@ -145,7 +154,55 @@ configure(core) {
         testCompile(group: 'org.hsqldb', name: 'hsqldb', version: '2.3.3')
     }
 
+    test {
+        maxHeapSize = "512m"
+        jvmArgs '-XX:MaxPermSize=256m'
+        workingDir = new File('../..')
+    }
+}
+
+configure(console) {
+    apply(plugin: 'application')
+
+    dependencies {
+        compile(api)
+        compile(core)
+        compile(group: 'commons-cli', name: 'commons-cli', version: '1.2')
+        compile(group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3')
+        compile(group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4')
+        testCompile(group: 'junit', name: 'junit', version: '4.5')
+    }
+
     mainClassName = "com.haulmont.yarg.console.ConsoleRunner"
+
+    configurations.archives.artifacts.removeAll {
+        it.file =~ 'tar' || it.file =~ 'zip'
+    }
+
+    startScripts {
+        doLast {
+            copy {
+                from "reporting.properties"
+                into outputDir
+            }
+        }
+    }
+
+    installDist {
+        doLast {
+            def outputDir = destinationDir
+            copy {
+                from "reporting.properties"
+                into "$outputDir/bin"
+            }
+        }
+    }
+
+    test {
+        maxHeapSize = "512m"
+        jvmArgs '-XX:MaxPermSize=256m'
+        workingDir = new File('../..')
+    }
 }
 
 subprojects {
